fix overflow on pebble visual

--- a/app/globals.css
+++ b/app/globals.css
@@ -500,3 +500,7 @@
     display: none !important;
   }
 }
+
+.pbbls-visual {
+  @apply h-full;
+}
